# transformations_and_gaze_prediction

./: .gitignore  .gitmodules  license  readme.md  run_experiment.sh
deepgaze_predict/: main.py  pyproject.toml
docs/: journal.md  thesis.bib  thesis.typ
docs/paper/: abstract.typ  main.bib  main.tex
docs/paper/sec/: 0_abstract.tex  1_intro.tex  2_related.tex  3_background.tex  4_method.tex  5_results.tex  6_conclusion.tex
docs/thesis/: thesis.bib  thesis.typ
evaluation/: .gitignore  analysis.py  benchmark.csv  benchmark.py  centerbias.py  dataset.py  fixation_benchmarks.csv  main.py  metrics.py  pyproject.toml  utilities.py  visualization.py
results/: all_performance_averages.csv  deepgaze_benchmark.csv  deepgaze_correlation_metrics.csv  deepgaze_loss_correlation_metrics.csv  initial_benchmark_results.csv  kl_reverse.csv  quadratic_terms_ig.csv  try_improve_deepgaze.csv  unisal_correlation_metrics.csv  unisal_loss_correlation_metrics.csv  unregularized_fixation_point_metrics.csv
results/centerbias_benchmarks/: 10_vs_2.csv  11_vs_2.csv  12_vs_2.csv  14_vs_2.csv  17_vs_2.csv  18_vs_2.csv  3_vs_2.csv  4_vs_2.csv  5_vs_2.csv  8_vs_2.csv  9_vs_2.csv
results/extraneous/: quadratic_terms_nss.csv
results/extraneous/centerbias_benchmarks/: 13_vs_2.csv  15_vs_2.csv  16_vs_2.csv  19_vs_2.csv  1_vs_35.csv  20_vs_2.csv  2_vs_1.csv  35_vs_57.csv  6_vs_2.csv  7_vs_2.csv
unisal_predict/: __init__.py  main.py  patched_unisal.py  pyproject.toml
