[project]
name = "unisal-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cudatoolkit=9.2",
    "pytorch=1.0",
    "torchvision",
    "opencv=3.4",
    "scipy=1.16.0",
    "tensorboardX=1.6",
    "unisal @ git+https://github.com/rdroste/unisal.git",
]
